# ai-personal-finance

./: .gitignore  CLAUDE.md  Makefile  README.md
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0b8a1225cc01_0004_ai_calls.py  218bc22cb8fc_0002_seed_data.py  4fabbb372f99_0001_init_schema.py  9eea4cdb7a06_0002b_add_saloon_and_rental_income.py  f7a8b9c0d1e2_0005_categorization_rules.py
apps/api/app/: config.py  main.py  models.py
apps/api/app/ai/: __init__.py  agent.py  audit.py  client.py  llm.py  tools.py
apps/api/app/ai/prompts/: categorize.md  nl_input.md
apps/api/app/api/: health.py
apps/api/app/db/: session.py
apps/api/app/routers/: accounts_router.py  ai_router.py  analytics_router.py  categories_router.py  categorize_router.py  dashboard_router.py  holdings_router.py  imports_router.py  instruments_router.py  investment_txns_router.py  ledger_router.py  transactions_router.py
apps/api/app/schemas/: accounts_schema.py  ai_schema.py  categories_schema.py  categorize_schema.py  dashboard_schema.py  holdings_schema.py  imports_schema.py  instruments_schema.py  investment_txns_schema.py  ledger_schema.py  monthly_schema.py  nl_input_schema.py  transactions_schema.py
apps/api/app/services/: accounts_service.py  analytics.py  categories_service.py  categorize.py  holdings_service.py  imports_service.py  instruments_service.py  investment_txns_service.py  ledger_service.py  nl_input.py  transactions_service.py
apps/api/tests/: test_accounts.py  test_agent.py  test_ai_usage.py  test_categories.py  test_categorize.py  test_config.py  test_dashboard.py  test_health.py  test_holdings.py  test_imports.py  test_instruments.py  test_investment_txns.py  test_ledger.py  test_llm.py  test_monthly_summary.py  test_nl_input.py  test_tools.py  test_transactions.py
apps/web/: .env.example  .gitignore  index.html  package-lock.json  package.json  postcss.config.js  sample-import.csv  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/scripts/: gen-api-client.sh
apps/web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/web/src/components/accounts/: AccountFormDialog.tsx  AccountsTable.tsx
apps/web/src/components/charts/: AllocationDonut.tsx  CashflowCards.tsx  CategoryBar.tsx  ChartCard.tsx  NetWorthLine.tsx
apps/web/src/components/imports/: CsvImportDialog.tsx
apps/web/src/components/investments/: AddTradeDialog.tsx  HoldingsTable.tsx  TradesTable.tsx  UpdatePriceDialog.tsx
apps/web/src/components/shell/: AppShell.tsx  GlobalFilters.tsx  Sidebar.tsx
apps/web/src/components/theme/: ModeToggle.tsx  ThemeProvider.tsx
apps/web/src/components/transactions/: CategorizeChip.tsx  TransactionFormDialog.tsx  TransactionsTable.tsx
apps/web/src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  select.tsx  sonner.tsx  table.tsx  tabs.tsx
apps/web/src/hooks/: useAccountMutations.ts  useAccounts.ts  useCategories.ts  useDashboard.ts  useInvestmentMutations.ts  useInvestments.ts  useTransactionMutations.ts
apps/web/src/lib/: dateRange.ts  http.ts  labels.ts  money.ts  queryClient.ts  themes.ts  transactions.ts  utils.ts
apps/web/src/lib/api/: index.ts
apps/web/src/lib/api/models/: AccountCreate.ts  AccountResponse.ts  AccountType.ts  AccountUpdate.ts  AllocationItem.ts  Body_preview_import_api_imports_transactions_preview_post.ts  CashflowBlock.ts  CategorizeAcceptRequest.ts  CategorizeBatchRequest.ts  CategorizeRuleResponse.ts  CategorizeSuggestRequest.ts  CategorizeSuggestResponse.ts  CategoryBreakdownItem.ts  CategoryChildResponse.ts  CategoryCreate.ts  CategoryDeleteResponse.ts  (+30 more)
apps/web/src/pages/: Accounts.tsx  ComingSoon.tsx  Dashboard.tsx  Investments.tsx  Transactions.tsx
apps/web/src/store/: filters.ts
plans/: personal-finance-ai-features.md  personal-finance-impl-tickets.md  you-are-a-senior-glowing-piglet.md
postman/: 01-core-apis.json  env-local.json
(+13 files in other folders)
