[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-personal-finance-api"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "anthropic>=0.40.0",
    "python-multipart>=0.0.12",
    # LangChain stack added in PF-22a.
    # We still keep `anthropic` because it's the underlying SDK that
    # `langchain-anthropic` calls into — removing it would break that wrapper.
    # `langsmith` and `langgraph` are intentionally NOT added here:
    #   - langsmith lands in PF-22c when we turn on tracing.
    #   - langgraph is only relevant if/when we build multi-agent Layer 5.
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    # Provider integrations live behind the get_llm() factory in app/ai/llm.py.
    # Add a new langchain-<provider> package here and register it there; feature
    # code never imports a provider directly.
    "langchain-groq>=0.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
